# ai_ed_tech

./: .env  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  INSTRUCTIONS.md  README.md  ai-tutor-key.pem  check_git.bat  docker-compose.prod.yml  docker-compose.yml  enhancement_plan.md  implementation_plan.md  phase2_implementation.md  phase3_implementation.md  provision.sh  rename_migrations.py  restore_migrations.py  setup_nginx.sh  ui_integration_plan.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 44aa224653c9_triggers_and_fulltext_indexes.py  fc4860b64979_baseline_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  answer_evaluator.py  assessment_analyzer.py  lesson_generator.py  question_generator.py  review_agent.py  tutor_chat.py
backend/app/ai/agents/: __init__.py  analyzer.py  base.py  document.py  document_validator.py  entity_extractor.py  examiner.py  feedback.py  flashcard.py  gamification.py  grader.py  image_agent.py  lesson.py  query_router.py  rag.py  reviewer.py  tutor.py  validator.py  vision_ocr.py
backend/app/ai/core/: __init__.py  bm25_search.py  content_moderator.py  guardrails.py  hybrid_retrieval.py  injection_detector.py  llm.py  memory.py  observability.py  phoenix_metrics.py  pii_redactor.py  reranker.py  safety_pipeline.py  similarity.py  telemetry.py
backend/app/ai/graphs/: __init__.py  base.py  document_graph.py  rag_graph.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  assessment.py  auth.py  chat.py  curriculum.py  documents.py  exam.py  feedback.py  gamification.py  parent.py  practice.py  review.py  study.py  test.py  users.py  visuals.py  voice.py
backend/app/core/: __init__.py  config.py  database.py  rate_limit.py  security.py
backend/app/models/: __init__.py  assessment.py  chat.py  curriculum.py  document.py  exam.py  favorite.py  flashcard.py  lesson.py  question_instance.py  test.py  user.py
backend/app/schemas/: __init__.py  assessment.py  chat.py  curriculum.py  exam.py  favorite.py  flashcard.py  lesson.py  lesson_modules.py  parent.py  review.py  test.py  user.py
backend/app/scripts/: expand_subtopics.py  seed_curriculum.py  seed_curriculum_cbse_full.py
backend/app/services/: __init__.py  analytics.py  assessment_grading.py  assessment_store.py  audit_log.py  auth.py  chat.py  data_retention.py  document.py  elevenlabs_tts.py  gamification.py  graph_store.py  learning_path.py  openai_tts.py  sarvam.py
backend/migrations/: 00_create_langfuse_db.sql  07_contextual_retrieval.sql  08_chat_memory.sql  09_document_quiz_history.sql  10_lesson_v2.sql  11_flashcards.sql  12_favorites.sql  english_curriculum.sql.disabled  gamification_migration.sql  phase2_rag_documents.sql  phase2e_document_validation.sql  phase3_migration.sql  phase3a_safety.sql.disabled
backend/tests/: conftest.py  test_assessment_grading.py  test_assessment_store.py  test_auth.py
docs/: CBSE_Curriculum_Expansion_Plan.md  REFACTOR_PLAN_2026.md  SECRET_ROTATION_CHECKLIST.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FlashcardDeck.tsx  GamificationBar.tsx  LessonView.tsx  LessonViewV2.tsx  SmartReviewCard.tsx  TutorChat.tsx  VoiceMode.tsx
frontend/src/pages/: AssessmentPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  ExamPage.tsx  FlashcardsPage.tsx  LoginPage.tsx  ParentDashboardPage.tsx  PracticePage.tsx  QuickReviewPage.tsx  RegisterPage.tsx  SettingsPage.tsx  StudyPage.tsx  SubjectPage.tsx  TestPage.tsx  VisualsPage.tsx
frontend/src/services/: api.ts  assessment.ts  auth.ts  chat.ts  curriculum.ts  document.ts  exam.ts  gamification.ts  parent.ts  study.ts  test.ts  visuals.ts
frontend/src/stores/: authStore.ts  studentStore.ts
frontend/src/types/: index.ts  react-confetti.d.ts
frontend/src/utils/: imageCompression.ts
mobile-app/: ANDROID_14_BUILD_GUIDE.md  ANDROID_SETUP.md  PLAY_STORE_SUBMISSION_GUIDE.md  README.md  app.json  clean_install.cmd  eas.json  launch_emulator.cmd  package-lock.json  package.json  start_android.cmd
mobile-app/app/: home.tsx  index.tsx  login.tsx  register.tsx  settings.tsx  voice.tsx
mobile-app/app/assessment/: [id].tsx
mobile-app/app/documents/: [id].tsx  index.tsx
mobile-app/app/exam/: [slug].tsx
mobile-app/app/flashcards/: [topicSlug].tsx
mobile-app/app/lesson/: [id].tsx
mobile-app/app/practice/: [id].tsx
mobile-app/app/study/: [slug].tsx
mobile-app/app/subject/: [slug].tsx
mobile-app/app/test/: [slug].tsx
mobile-app/src/: types.ts
mobile-app/src/api/: client.ts
mobile-app/src/context/: AuthContext.tsx
mobile-app/src/services/: assessment.ts  auth.ts  curriculum.ts  documents.ts  exam.ts  practice.ts  study.ts  test.ts  user.ts
