[project]
name = "ai-tutor-backend"
version = "0.1.0"
description = "AI Tutor Platform Backend - FastAPI service for personalized K-12 education"
# Pinned to 3.11 in Phase 1: langchain-core 0.2.x requires pydantic>=2.7.4 on
# Python >=3.12.4 (marker-conditional), conflicting with our pydantic==2.6.0.
# Python 3.12 lands with the Phase 2 dependency upgrades.
requires-python = ">=3.11,<3.12"
# Phase 1 note: these pins mirror the former requirements.txt EXACTLY (single
# source of truth now). Version upgrades happen in Phase 2, not here.
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "gunicorn>=21.2.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "celery[redis]==5.3.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.9",
    "httpx>=0.25.0",
    "email-validator==2.1.1",  # 2.1.0 is yanked (metadata-only fix)
    # Rate limiting (Phase 0 - abuse & brute-force protection)
    "slowapi>=0.1.9",
    # LangChain ecosystem (0.2.x line; 1.x migration is Phase 2).
    # Providers capped <0.2 because their 0.2+ lines require langchain-core 0.3.
    "langchain>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "langchain-anthropic>=0.1.5,<0.2.0",
    "langchain-community>=0.2.0,<0.3.0",
    # langgraph 0.2.43+ requires langchain-core 0.3; stay in the early 0.2 line
    "langgraph>=0.2.0,<0.2.40",
    # OpenTelemetry - Agent Observability & Tracing
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    # RAG - Document Processing & Vector Storage
    "pgvector==0.2.4",
    "pypdf>=4.0.1",
    "python-docx>=1.1.0",
    "tiktoken>=0.5.2",
    "aiofiles>=23.2.1",
    # Safety & PII Protection
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    # LLM Observability.
    # <3 guard: observability.py uses the v2 SDK API; a v3/v4 SDK install makes
    # its imports fail and silently disables ALL Langfuse tracing (audit D10).
    # The SDK v4 migration is Phase 2.
    "langfuse>=2.0.0,<3.0.0",
    # Voice Mode
    "websockets>=12.0",
    # Hybrid Search & Retrieval
    "rank-bm25>=0.2.2",
    "cohere>=5.0.0",
    # Graph RAG (dormant; scheduled for deletion in Phase 2)
    "neo4j>=5.15.0",
    # Multimodal OCR
    "PyMuPDF>=1.24.0",
    # NOTE: openinference-instrumentation-langchain / openinference-semantic-
    # conventions / arize-phoenix-otel were dropped here (Phase 2 subtraction
    # pulled forward): phoenix_metrics.py is referenced by nothing and its
    # imports never worked, so these deps were pure resolution weight — and
    # they conflicted with the langchain-core 0.2.x line.
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# The app is deployed via Docker; lock for Linux + local Windows dev.
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # long lines: legacy code, cleaned up opportunistically
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
